--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Dongle&family=Hahmlet&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Hahmlet&display=swap');
 
 body {
   font-family: 'Hahmlet', serif;
